crates/ddlog-syntax/tests/validation/fail/relation_with_input_and_output.rast
ROOT@0..55
  COMMENT@0..26 "// kind:item validate ..."
  WHITESPACE@26..27 "\n"
  ITEM@27..55
    RELATION_DEF@27..55
      ATTRIBUTES@27..27
      MODIFIERS@27..39
        INPUT@27..32 "input"
        WHITESPACE@32..33 " "
        OUTPUT@33..39 "output"
      WHITESPACE@39..40 " "
      REL_KW@40..48
        RELATION@40..48 "relation"
      WHITESPACE@48..49 " "
      REL_NAME@49..52
        IDENT@49..52 "Foo"
      REL_COLS@52..54
        L_PAREN@52..53 "("
        R_PAREN@53..54 ")"
      WHITESPACE@54..55 "\n"
--
Error: a relation cannot be marked as both 'input' and 'output'
   ,-[validation/fail/relation_with_input_and_output.dl:2:1]
   |
 2 | input output relation Foo()
   : ^^|^^ ^^^|^^  
   :   `----------- marked as 'input' here
   :          |    
   :          `---- marked as 'output' here
---'
--
// kind:item validate:true
input output relation Foo()
